Cambie el HeaderPages.jsx para que sea un componente reutilizable

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,6 +4,8 @@
 
 @tailwind utilities;
 
+@import "./fonts.css";
+
 * {
   box-sizing: border-box;
 }
@@ -104,6 +106,7 @@ main {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: "Raleway", sans-serif;
 }
